--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,3 +32,5 @@ version:            2.0.1
 github:
   repo:             https://github.com/karloespiritu/blackdoc
 
+
+theme: jekyll-theme-midnight
